<resources>
    <string name="app_name">Tutuor</string>
    <string name="do_not_have_account_sign_up">Do not have account? Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="welcome_message">Welcome message</string>
    <string name="already_have_account_sing_in">Already have account? Sing In</string>
    <string name="create_new_account">Create new account</string>
    <string name="full_name">Full name</string>
    <string name="email">Email</string>
    <string name="telegram_id">Telegram ID</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="registration">Registration</string>
    <string name="welcome_back">Welcome back</string>
    <string name="monday">M</string>
    <string name="tuesday">T</string>
    <string name="wednesday">W</string>
    <string name="thursday">T</string>
    <string name="friday">F</string>
    <string name="saturday">S</string>
    <string name="sunday">S</string>
    <string name="title_auth">Auth</string>

    <string name="something_is_empty">Something is empty</string>
    <string name="invalid_email">Invalid email</string>
    <string name="invalid_tg">Invalid Telegram ID</string>
    <string name="weak_password">Weak password</string>
    <string name="passwords_not_same">Passwords not the same</string>
    <string name="title_spash">Splash</string>
    <string name="title_splash">Splash</string>
    <string name="students">Students</string>
    <string name="lessons">Lessons</string>
    <string name="quizzes">Quizzes</string>
    <string name="account">Account</string>
    <string name="chat">Chat</string>
    <string name="add_student">Add student</string>
    <string name="create">Create</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="student">Student</string>
    <string name="specific_student">Student: %1$s</string>
    <string name="log_out">Log out</string>
    <string name="save">Save</string>
    <string name="account_students_count">Students: %1$d</string>
    <string name="edit">Edit</string>
    <string name="no_students">No students</string>
    <string name="add_lesson">Add lesson</string>
    <string name="no_lessons">No lessons</string>
    <string name="calendar">Calendar</string>
    <string name="list">List</string>
    <string name="create_student">Create student</string>
    <string name="create_lesson">Create lesson</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="date">Date</string>
    <string name="none">None</string>
    <string name="specific_date">Date: %1$s</string>
    <string name="doubleclick_to_select_date_and_time">Doubleclick to select date and time</string>
    <string name="click_to_select">Click to select</string>
    <string name="select">Select</string>
    <string name="open">Open</string>
    <string name="no_quizzes">No quizzes</string>
    <string name="add_quiz">Add quiz</string>
    <string name="create_quiz">Create quiz</string>
    <string name="url">Url</string>
    <string name="create_google_form">Create google form</string>
</resources>