<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/app_margin">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:minHeight="?attr/actionBarSize"
        app:menu="@menu/edit_toolbar_menu"
        app:title="@string/account" />

    <TextView
        android:id="@+id/studentsCountView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_marginStart="@dimen/app_margin"
        android:layout_marginTop="@dimen/app_margin"
        android:layout_marginEnd="@dimen/app_margin"
        android:layout_marginBottom="@dimen/app_margin"
        android:textSize="18sp"
        android:text="@string/account_students_count" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fullNameInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/studentsCountView"
        android:layout_marginHorizontal="@dimen/app_margin"
        android:hint="@string/full_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fullNameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/telegramInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/fullNameInputLayout"
        android:layout_margin="@dimen/app_margin"
        android:hint="@string/telegram_id">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/telegramInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/telegramInputLayout"
        android:layout_marginHorizontal="@dimen/app_margin"
        android:hint="@string/email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/logOutBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="@dimen/app_margin"
        android:backgroundTint="?attr/colorError"
        android:text="@string/log_out" />
</RelativeLayout>