<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="@dimen/app_margin"
    android:paddingVertical="@dimen/half_app_margin">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        app:menu="@menu/create_toolbar_menu"
        app:title="@string/create_quiz" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/titleInputLayout"
        android:layout_width="match_parent"
        android:layout_marginVertical="@dimen/app_margin"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/titleInput"
            android:layout_width="match_parent"
            android:hint="@string/title"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnCreateForm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_google_form" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/urlInputLayout"
        android:layout_width="match_parent"
        android:hint="@string/url"
        android:layout_marginVertical="@dimen/app_margin"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/urlInput"
            android:layout_width="match_parent"
            android:inputType="textUri"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>


</LinearLayout>